xx/xx/2011 MythBox 1.0.3
-----------------------------

  New
    - Selecting an upcoming recording in the TV Guide allows you to
      edit its recording schedule
    - Issue 155 - User Jobs added to the Create/Edit Schedule window

  Fixed
    - Some 1080i ATSC recordings from a HD Homerun were incorrectly
      getting commskipped due to incorrect fps detection
	
1/25/2011 - MythBox 1.0.2
-----------------------------
  New
    - Issue 148 - Dutch translations (tnx Fred van Zwieten)
    
  Fixed
    - Issue 145 - Fixed unicode error in Live TV window 
    - Issue 147 - Changes to the recording schedule do not take effect immediately
    - Issue 149 - Help text on Settings screen gets truncated based on the translation
    - Added support for ScheduleType.NOT_RECORDING
    - TVRage grabber more resilient to incomplete season and episode information
    - Google image search now works for programs with unicode chars in the title
    
1/13/2011 - MythBox 1.0.1
-----------------------------
  New
    - Issue 132 - Support for MythTV 0.24 except for LiveTV (thx mitch capper)
    - TVRage season and episode matching now uses the program's subtitle when the original air date search fails
    - Added Episode column to the recordings screen
    - TV Guide shows upcoming recordings in a different color
    - Readme and FAQ viewable from MythBox > Settings > Readme and FAQ
    - Czech translations (tnx Pavel Mlčoch)
    - Swedish translations (tnx Magnus Gustafsson)
    - Polish translations (tnx Michał Sawicz)
        
  Fixed
    - Issue 136 - mythbox.log moved to standard log dir on Mac OSX
    - Issue 141 - settings.xml parsing failed when removing mythboxfeed
    - Issue 142 - could not save new recording schedules that contained unicode chars
    - TVRage metadata with missing seasons caused lookup failures 
    - Resuming from last position now works for ad-hoc recordings
    - Thumbnail generation for 0.24 backends fixed