@@ -5,7 +5,10 @@ xx/xx/2011 MythBox 1.0.3
     - Selecting an upcoming recording in the TV Guide allows you to
       edit its recording schedule
     - Issue 155 - User Jobs added to the Create/Edit Schedule window
-
+    - TVDB banners added to Watch TV and TV Guide windows
+    - Optimized retrieval of upcoming recordings based on schedule
+      change events from the backend
+    
   Fixed
     - Some 1080i ATSC recordings from a HD Homerun were incorrectly
       getting commskipped due to incorrect fps detection
